kubernetes/apps/snippet-box/app/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snippet-box
  namespace: snippet-box
  labels:
    app.kubernetes.io/name: snippet-box
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: snippet-box
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snippet-box
    spec:
      containers:
        - name: snippet-box
          image: pawelmalak/snippet-box:arm
          ports:
            - protocol: TCP
              containerPort: 5000
              name: snippet-box-port
          volumeMounts:
            - name: snippet-box-data
              mountPath: /app/data
      volumes:
        - name: snippet-box-data
          hostPath:
            path: /mnt/nfs/AppData/snippet-box
            type: Directory
