kubernetes/apps/snippet-box/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippet-box
  namespace: snippet-box
  labels:
    app.kubernetes.io/name: snippet-box
spec:
  selector:
    app.kubernetes.io/name: snippet-box
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: snippet-box-port
